// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/Layout/SideNavEntry renders correctly with link 1`] = `
.glamor-1 {
  color: #b0bec5;
}

.glamor-5 {
  border-left: 3px solid transparent;
  cursor: pointer;
}

.glamor-5:hover {
  border-left: 3px solid #ff9800;
}

<a
  href="/test"
  onClick={[Function]}
>
  <li
    className="MuiListItem-root-1 MuiListItem-gutters-8 MuiListItem-default-4 glamor-4 glamor-5"
    disabled={false}
    onClick={undefined}
  >
    <span
      aria-hidden="true"
      className="material-icons MuiIcon-root-11 glamor-0 MuiListItemIcon-root-10 fa fa-icon glamor-1"
    />
    <div
      className="MuiListItemText-root-18 MuiListItemText-inset-19 glamor-2 glamor-1"
    >
      Test
    </div>
  </li>
</a>
`;

exports[`pages/Layout/SideNavEntry renders correctly without link 1`] = `
.glamor-1 {
  color: #b0bec5;
}

.glamor-5 {
  border-left: 3px solid transparent;
  cursor: pointer;
}

.glamor-5:hover {
  border-left: 3px solid #ff9800;
}

<li
  className="MuiListItem-root-1 MuiListItem-gutters-8 MuiListItem-default-4 glamor-4 glamor-5"
  disabled={false}
  onClick={undefined}
>
  <span
    aria-hidden="true"
    className="material-icons MuiIcon-root-11 glamor-0 MuiListItemIcon-root-10 fa fa-icon glamor-1"
  />
  <div
    className="MuiListItemText-root-18 MuiListItemText-inset-19 glamor-2 glamor-1"
  >
    Test
  </div>
</li>
`;
